# thaum

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  TODO.md
.claude/: settings.json
.config/: nextest.toml
.github/workflows/: bench.yml  ci.yml
benches/: bench.rs
benches/bench/: callgrind.rs  docker.rs  format.rs  hyperfine_backend.rs  types.rs
benches/docker/: Dockerfile  bench.Dockerfile
benches/scripts/: arithmetic.sh.yaml  complex.sh.yaml  control_flow.sh.yaml  functions.sh.yaml  pipeline.sh.yaml  read_builtin.sh.yaml  trivial.sh.yaml  variables.sh.yaml
crates/expect/: Cargo.toml
crates/expect/src/: lib.rs
crates/expect/tests/: expect.rs
crates/test-tools/: Cargo.toml  build.rs
crates/test-tools/src/: lib.rs
crates/test-tools/src/tools/: pwd.rs
crates/testkit/: Cargo.toml
crates/testkit/src/: docker.rs  lib.rs  sh_yaml.rs
crates/testkit/src/callgrind_parser/: callgrind_parser_tests.rs
crates/testkit/src/tools/: cat.rs  echo.rs  env.rs  false.rs
scripts/: build-corpus-docker.sh  check-no-llm-author.py  format-section-comments.py  format-sh-yaml.py  import-oils.py  install-sh-yaml-extension.sh
src/: ast.rs  ast_tests.rs  callgrind_parser.rs  cli.rs  dialect.rs  error.rs  exec.rs  fold.rs  fold_tests.rs  format.rs  interactive.rs  interactive_tests.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  span_tests.rs  table.rs  testkit.rs  token.rs  token_tests.rs  visit.rs  visit_tests.rs  word.rs
src/callgrind_parser/: callgrind_parser_tests.rs
src/cli/: color.rs  error_fmt.rs  impersonation.rs  interactive.rs  mod.rs  source_map.rs  yaml_emitter.rs  yaml_emitter_tests.rs  yaml_value.rs  yaml_writer.rs
src/exec/: arithmetic.rs  arithmetic_tests.rs  bash_test.rs  brace_expansion.rs  brace_expansion_tests.rs  builtins.rs  builtins_tests.rs  child_io.rs  command_ex.rs  command_ex_tests.rs  compound.rs  environment.rs  environment_tests.rs  error.rs  expand.rs  expand_tests.rs  external.rs  gettext.rs  gettext_tests.rs  io_context.rs  io_context_tests.rs  locale.rs  locale_tests.rs  mod.rs  numeric.rs  numeric_tests.rs  pattern.rs  pipeline.rs  pipeline_tests.rs  platform.rs  platform_tests.rs  printf.rs  printf_tests.rs  prompt.rs  prompt_tests.rs  redirect.rs  special_builtins.rs  subshell.rs  test_builtin.rs  test_builtin_tests.rs  (+1 more)
src/exec/command_ex/: resolve_windows.rs  resolve_windows_tests.rs  spawn_windows.rs
src/exec/environment/: dir_stack.rs  dynamic_vars.rs
src/exec/platform/: windows.rs
src/format/: mod.rs  source_map.rs  source_writer.rs  source_writer_tests.rs  yaml_emitter.rs  yaml_emitter_tests.rs  yaml_value.rs  yaml_writer.rs
src/lexer/: char_source.rs  cursor.rs  heredoc.rs  mod.rs  operators.rs  tests.rs  word_scan.rs
src/parser/: arith_expr.rs  bash.rs  commands.rs  compound.rs  expressions.rs  helpers.rs  mod.rs  test_expr.rs  tests.rs  token_stream.rs  token_stream_tests.rs  word_collect.rs
src/parser/arith_expr/: lexer.rs  mod.rs  tests.rs
src/table/: table_tests.rs
src/testkit/: sh_yaml.rs
src/word/: params.rs  subst.rs  tests.rs
tests/: bash_features.rs  bench.rs  bench_smoke.rs  cli.rs  cli_output.rs  commands.rs  compound.rs  corpus.rs  corpus_runner.rs  errors.rs  exec.rs  exec_basic.rs  exec_conformance.rs  infra.rs  parse.rs  parse_known_failures.rs  pipelines.rs  redirects.rs  word_expansion.rs
tests/bench_smoke_support/: preconditions.rs
tests/bench_support/: callgrind_tests.rs  mod.rs
tests/cli/: interactive.rs  output.rs
tests/common/: docker.rs  mod.rs  test_tools.rs
tests/corpus/arithmetic/: basic-addition.sh.yaml  octal-constant.sh.yaml
tests/corpus/commands/: echo-hello.sh.yaml  echo-multiple-args.sh.yaml
tests/corpus/errors/: unclosed-if.sh.yaml
tests/corpus/heredoc/: simple-heredoc.sh.yaml
tests/corpus/oils/alias/: alias-and-arithmetic.sh.yaml  alias-and-command-sub-bug-regression.sh.yaml  alias-and-ps4.sh.yaml  alias-can-be-defined-and-used-on-a-single-line.sh.yaml  alias-can-override-builtin.sh.yaml  alias-for-left-brace.sh.yaml  alias-for-left-paren.sh.yaml  alias-is-respected-inside-eval.sh.yaml  alias-must-be-an-unquoted-word-no-expansions-allowed.sh.yaml  alias-name-with-punctuation.sh.yaml  alias-not-defined.sh.yaml  alias-not-respected-inside.sh.yaml  alias-that-is-pipeline.sh.yaml  alias-that-is.sh.yaml  alias-trailing-newline.sh.yaml  alias-used-in-here-doc.sh.yaml  alias-used-in-subshell-and-command-sub.sh.yaml  alias-with-a-quote-in-the-middle-is-a-syntax-error.sh.yaml  alias-with-environment-bindings-works.sh.yaml  alias-with-internal-newlines.sh.yaml  alias-with-keywords.sh.yaml  alias-with-line-continuation-in-the-middle.sh.yaml  alias-with-redirects-works.sh.yaml  alias-with-trailing-space-causes-alias-expansion-on-second-word.sh.yaml  alias-with-word-of-multiple-lines.sh.yaml  alias-without-args-lists-all-aliases.sh.yaml  basic-alias.sh.yaml  corner-case-alias-inside-lhs-array-arithmetic-expression.sh.yaml  define-and-use-alias-on-a-single-line.sh.yaml  defining-multiple-aliases-then-unalias.sh.yaml  dynamic-alias-definition.sh.yaml  expansion-of-alias-with-variable.sh.yaml  here-doc-inside-alias.sh.yaml  (+15 more)
tests/docker/: Dockerfile  Dockerfile.corpus  conformance_runner.sh
tests/exec/: append.rs  arrays.rs  bash.rs  basic.rs  brace_expansion.rs  expansion.rs  external.rs  interactive.rs  printf.rs  variables.rs
tests/exec_conformance_support/: helpers.rs  mod.rs  preconditions.rs  tests.rs
tests/infra/: bench_callgrind.rs  docker.rs  preconditions.rs
tests/parse/: bash.rs  commands.rs  compound.rs  errors.rs  pipelines.rs  redirects.rs  word_expansion.rs
tests/parse/bash/: arithmetic.rs  double_bracket.rs
tests/tools/: touch.rs  true.rs
testutil/: Cargo.toml  README.md
testutil/macros/: Cargo.toml
testutil/macros/src/: lib.rs
testutil/src/: docker.rs  fixture.rs  lib.rs  temp_dir.rs  test_name.rs
testutil/tests/: integration.rs
testutil/tests/integration_support/: fixture_tests.rs  harness_tests.rs  label_tests.rs  mod.rs
(+3916 files in other folders)
