[workspace]
members = [".", "testutil", "testutil/macros"]

[package]
name = "thaum"
version = "0.1.0"
edition = "2021"

[lib]
harness = false

[features]
default = []
cli = ["dep:colored", "dep:clap"]
bench = ["dep:clap"]

[dependencies]
thiserror = "2"
contracts = "0.6"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
colored = { version = "3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
regex = "1"
icu = "2"
jiff = "0.2"
gettext = "0.4"
homedir = "0.3"
getrandom = "0.3"

[target.'cfg(unix)'.dependencies]
command-fds = "0.3"
nix = { version = "0.30", features = ["user", "term", "process", "hostname"] }

[target.'cfg(windows)'.dependencies]
winspawn = "0.1"
windows = { version = "0.62", features = ["Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.62", features = ["Win32_System_Console"] }

[dev-dependencies]
pretty_assertions = "1"
serde_yaml2 = "0.1"
yaml-rust2 = "0.8"
libtest-mimic = "0.8"
testutil = { path = "testutil" }
clap = { version = "4", features = ["derive"] }
tempfile = "3.26.0"

[[test]]
name = "parse"
harness = false

[[test]]
name = "cli"
harness = false
required-features = ["cli"]

[[test]]
name = "exec"
harness = false

[[test]]
name = "corpus"
harness = false

[[test]]
name = "bench"
path = "tests/bench.rs"
harness = false

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "thaum"
path = "src/main.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "thaum-bench"
path = "benches/bench.rs"
required-features = ["bench"]
test = false
