[workspace]
members = ["."]

[package]
name = "thaum"
version = "0.1.0"
edition = "2021"
default-run = "thaum"

[lib]
harness = false

[features]
default = []
cli = ["dep:colored", "dep:clap"]
bench = ["dep:clap"]
testkit = []

[dependencies]
thiserror = "2"
contracts = "0.6"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
colored = { version = "3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
regex = "1"
icu = "2"
jiff = "0.2"
gettext = "0.4"
homedir = "0.3"
getrandom = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["user", "term", "process", "hostname", "fs"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[dev-dependencies]
pretty_assertions = "1"
serde_yaml2 = "0.1"
yaml-rust2 = "0.8"
libtest-mimic = "0.8"
skuld = { git = "https://github.com/bindreams/skuld" }
clap = { version = "4", features = ["derive"] }
tempfile = "3.26.0"

[[test]]
name = "parse"
harness = false

[[test]]
name = "cli"
harness = false
required-features = ["cli"]

[[test]]
name = "exec"
harness = false

[[test]]
name = "corpus"
harness = false
required-features = ["testkit"]

[[test]]
name = "infra"
harness = false
required-features = ["testkit"]

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "thaum"
path = "src/main.rs"
required-features = ["cli"]
test = false

[[bin]]
name = "thaum-bench"
path = "benches/bench.rs"
required-features = ["bench"]
test = false

[[bin]]
name = "test-echo"
path = "tests/tools/echo.rs"
test = false

[[bin]]
name = "test-true"
path = "tests/tools/true.rs"
test = false

[[bin]]
name = "test-false"
path = "tests/tools/false.rs"
test = false

[[bin]]
name = "test-cat"
path = "tests/tools/cat.rs"
test = false

[[bin]]
name = "test-env"
path = "tests/tools/env.rs"
test = false

[[bin]]
name = "test-pwd"
path = "tests/tools/pwd.rs"
test = false

[[bin]]
name = "test-touch"
path = "tests/tools/touch.rs"
test = false
