[workspace]
members = [".", "crates/testkit"]

[package]
name = "thaum"
version = "0.1.0"
edition = "2021"
default-run = "thaum"

[lib]
harness = false

[features]
default = []
cli = ["dep:colored", "dep:clap", "dep:rustyline"]

[dependencies]
thiserror = "2"
contracts = "0.6"
strum = { version = "0.27", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
colored = { version = "3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
regex = "1"
icu = "2"
jiff = "0.2"
gettext = "0.4"
homedir = "0.3"
getrandom = "0.3"
rustyline = { version = "15", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.30", features = ["user", "term", "process", "hostname", "fs"] }
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }

[dev-dependencies]
pretty_assertions = "1"
yaml-rust2 = "0.8"
libtest-mimic = "0.8"
skuld = { git = "https://github.com/bindreams/skuld" }
clap = { version = "4", features = ["derive"] }
tempfile = "3.26.0"
thaum-testkit = { path = "crates/testkit" }
expectrl = "0.8.0"

[[test]]
name = "parse"
harness = false

[[test]]
name = "cli"
harness = false
required-features = ["cli"]

[[test]]
name = "exec"
harness = false

[[test]]
name = "corpus"
harness = false

[[test]]
name = "infra"
harness = false

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "thaum"
path = "src/main.rs"
required-features = ["cli"]
test = false

