[package]
name = "thaum-expect"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
ptyprocess = "0.5"

[target.'cfg(windows)'.dependencies]
conpty = "0.7"

[dev-dependencies]
skuld = { git = "https://github.com/bindreams/skuld" }

[lib]
harness = false

[[test]]
name = "expect"
harness = false
